[allure-adaptor] Add ability to customize tab with defect categories